--- a/index.html
+++ b/index.html
@@ -514,15 +514,15 @@ function declineCookies() {
 }
 			
 			const gameDetails = {
-				nation1: "Zimbabwe",
-				nation2: "New Zealand",
-				date: "Jul 28-31, 2016",
-				venue: "Bulawayo",
-				score: "Zimbabwe 164 & 295, New Zealand 576/6d; New Zealand won by an innings and 117 runs",
-				crickdlequestion: "New Zealand player scored 173* in this match?"
+				nation1: "England",
+				nation2: "Australia",
+				date: "Aug 9-12, 2013",
+				venue: "Chester-le-Street",
+				score: "England 238 & 330, Australia (T: 299) 270 & 224; England won by 74 runs",
+				crickdlequestion: "England player took 5/71 & 6/50 in this match?"
 			};
 
-			const correctPlayer = ["TAYLOR"];
+			const correctPlayer = ["BROAD"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
