--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 			gtag('config', 'G-F1WGM1SC5E');
 		</script>
-		<link rel=“canonical” href=“https://crickdle.com/” />
+		<link rel="canonical" href="https://crickdle.com/" />
 		<script type="application/ld+json">
 		{
 		"@context": "http://schema.org",
@@ -29,7 +29,7 @@
       <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
-  <meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge Every Day!">
+  <meta name="description" content="Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.">
   <meta name="keywords" content="Wordle, cricket, Crickdle, test, challenge, quiz, game, sport, bowler, batsman, bowled, duck">
 		<style>
     @font-face {
@@ -77,12 +77,10 @@
 				border-radius: 0.5rem;
 				width: 90%;
 				max-width: 600px;
-        margin: 0 auto;
 			}
 
 			#match-details {
 				text-align: center;
-				margin-bottom: 25px;
 				font-family: InterTight, sans-serif;
         width: 90%;
 		max-width: 600px;
@@ -98,7 +96,7 @@
 				font-size: 1.1rem;
 				font-weight: 500;
 				font-family: InterTight, sans-serif;
-        color: black;
+        color: #333;
 			}
 
 			#guess-section {
