--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 			gtag('config', 'G-F1WGM1SC5E');
 		</script>
-		<link rel="canonical" href="https://crickdle.com/" />
+		<link rel="canonical" href="https://crickdle.com/">
 		<script type="application/ld+json">
 		{
 		"@context": "http://schema.org",
@@ -476,19 +476,19 @@
         <div class="game-container">
 		<h2><span style="font-weight: 500"><span style="color: #000000">Which <span id="crickdlequestion"></span></span></span></h2>
 			<div class="guess-input">
-				<input type="text" id="guess1" />
+				<input type="text" id="guess1">
 				<button id="submit1"><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
-				<input type="text" id="guess2" disabled />
+				<input type="text" id="guess2" disabled>
 				<button id="submit2" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
-				<input type="text" id="guess3" disabled />
+				<input type="text" id="guess3" disabled>
 				<button id="submit3" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
 			<div class="guess-input">
-				<input type="text" id="guess4" disabled />
+				<input type="text" id="guess4" disabled>
 				<button id="submit4" disabled><span style="font-weight: 500">&rArr;</span></button>
 			</div>
       </div>
