--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.">
 		<meta name="keywords" content="Wordle, cricket, Crickdle, test, challenge, quiz, game, sport, bowler, batsman, bowled, duck">
+		<meta property="og:title" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
+		<meta property="og:description" content="Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.">
+		<meta property="og:image" content="https://crickdle.com/favicon.ico.png">
+		<meta property="og:url" content="https://crickdle.com/">
+		<meta property="og:type" content="website">
 		<style>
 			@font-face {
 				font-family: InterTight;
