--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
 			};
 
 			const correctPlayer = ["BROAD"];
+			document.getElementById("correctPlayer").textContent = correctPlayer[0];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
