--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "England",
-				nation2: "Australia",
-				date: "Aug 9-12, 2013",
-				venue: "Chester-le-Street",
-				score: "England 238 & 330, Australia (T: 299) 270 & 224; England won by 74 runs",
-				crickdlequestion: "England player took 5/71 & 6/50 in this match?"
+				nation1: "India",
+				nation2: "Sri Lanka",
+				date: "Dec 10-14, 2005",
+				venue: "Delhi",
+				score: "India 290 & 375/6d, Sri Lanka (T: 436) 230 & 247; India won by 188 runs",
+				crickdlequestion: "India player took 6/72 & 4/85 in this match?"
 			};
 
-			const correctPlayer = ["BROAD"];
+			const correctPlayer = ["KUMBLE"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
