--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "India",
-				nation2: "Sri Lanka",
-				date: "Dec 10-14, 2005",
-				venue: "Delhi",
-				score: "India 290 & 375/6d, Sri Lanka (T: 436) 230 & 247; India won by 188 runs",
-				crickdlequestion: "India player took 6/72 & 4/85 in this match?"
+				nation1: "England",
+				nation2: "West Indies",
+				date: "Aug 25-29, 2017",
+				venue: "Leeds",
+				score: "England 258 & 490/8d, West Indies (T: 322) 427 & 322/5; West Indies won by 5 wickets",
+				crickdlequestion: "West Indies player scored 147 & 118* in this match?"
 			};
 
-			const correctPlayer = ["KUMBLE"];
+			const correctPlayer = ["HOPE"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
