--- a/duck.html
+++ b/duck.html
@@ -298,7 +298,7 @@
 		<span class="dash" id="dash3">●</span>
 		<span class="dash" id="dash4">●</span>
 		</div>
-		<p><span style="font-weight: 500">You didn't get today's Crickdle. The answer is KUMBLE.</span></p>
+		<p><span style="font-weight: 500">You didn't get today's Crickdle. The answer is HOPE.</span></p>
 		<p>Come back tomorrow to guess another cricketer.</p>
         <button class="share-button">SHARE</button>
 		<p>Next Crickdle in <span id="countdown"></span></p>
