--- a/index.html
+++ b/index.html
@@ -591,6 +591,17 @@
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
+		    // get current streak from local storage
+let currentStreak = localStorage.getItem('currentStreak');
+if (!currentStreak) {
+  // if current streak is null or undefined, start a new streak
+  currentStreak = 1;
+} else {
+  // otherwise increment the current streak
+  currentStreak = parseInt(currentStreak) + 1;
+}
+// store current streak in local storage
+localStorage.setItem('currentStreak', currentStreak);
             } else if (isClose(guess, correctPlayer)) {
                 guessInput.style.backgroundColor = "#e4a404";
                 guessInput.style.color = "white";
