--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
 			}
 			
 			const gameDetails = {
-				nation1: "England",
-				nation2: "West Indies",
-				date: "Aug 25-29, 2017",
-				venue: "Leeds",
-				score: "England 258 & 490/8d, West Indies (T: 322) 427 & 322/5; West Indies won by 5 wickets",
-				crickdlequestion: "West Indies player scored 147 & 118* in this match?"
+				nation1: "Sri Lanka",
+				nation2: "Zimbabwe",
+				date: "Jan 4-7, 2002",
+				venue: "Kandy",
+				score: "Zimbabwe 236 & 175, Sri Lanka 505; Sri Lanka won by an innings and 94 runs",
+				crickdlequestion: "Sri Lanka player took 9/51 & 4/64 in this match?"
 			};
 
-			const correctPlayer = ["HOPE"];
+			const correctPlayer = ["MURALIDARAN"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
