--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 				crickdlequestion: "Sri Lanka player took 9/51 & 4/64 in this match?"
 			};
 
-			const correctPlayer = ["MURALIDARAN"];
+			const correctPlayer = ["MURALIDARAN", "MURALI"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
