--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
             if (correctPlayer.includes(guess)) {
                 guessInput.style.backgroundColor = "#1dc278";
                 guessInput.style.color = "white";
-                window.location.href = "duck.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
+                window.location.href = "duck.html?isCorrect=true" +
+		    "guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
