--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             if (correctPlayer.includes(guess)) {
                 guessInput.style.backgroundColor = "#1dc278";
                 guessInput.style.color = "white";
-                window.location.href = "duck.html?isCorrect=true&" +
+                window.location.href = "result.html?isCorrect=true&" +
 		    "guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
@@ -600,7 +600,7 @@
                     guessInputs[index + 1].querySelector("button").disabled = false;
                     guessInputs[index + 1].querySelector("input").focus();
                 } else {
-                    window.location.href = "duck.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
+                    window.location.href = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
@@ -613,7 +613,7 @@
                     guessInputs[index + 1].querySelector("button").disabled = false;
                     guessInputs[index + 1].querySelector("input").focus();
                 } else {
-                    window.location.href = "duck.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
+                    window.location.href = "result.html?guess1=" + guessInputs[0].querySelector("input").style.backgroundColor +
                                         "&guess2=" + guessInputs[1].querySelector("input").style.backgroundColor +
                                         "&guess3=" + guessInputs[2].querySelector("input").style.backgroundColor +
                                         "&guess4=" + guessInputs[3].querySelector("input").style.backgroundColor;
