--- a/result.html
+++ b/result.html
@@ -333,13 +333,13 @@ if (localStorage.getItem("streak") === null) {
             result2MessageElement.textContent = "You got today's Crickdle.";
 		streak++;
 		const streakElement = document.getElementById("streak");
-streakElement.textContent = `Streak: ${streak}*`;
+streakElement.textContent = `Your streak: ${streak}*`;
         } else {
             result1MessageElement.textContent = "Out for a duck!";
             result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is MURALIDARAN.";
 		 streak = 0;
 		const streakElement = document.getElementById("streak");
-streakElement.textContent = `Streak: ${streak}`;
+streakElement.textContent = `Your streak: ${streak}`;
         }
 		localStorage.setItem("streak", streak.toString());
 		
