--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 	<body>
 		<header>
 			<div id="cookieConsent" style="display:none;">
-				<p>We use Google Analytics cookies to better understand how our website is used.</p>
+				<p>We use cookies to understand how our website is used and improve your playing experience.</p>
 				<button onclick="acceptCookies()">ACCEPT</button>
 				<button onclick="declineCookies()">DECLINE</button>
 			</div>
