--- a/index.html
+++ b/index.html
@@ -623,6 +623,24 @@ setInterval(resetAt9am, 60 * 1000);
 							warningPopup.parentNode.removeChild(warningPopup);
 						}, 1500);
 						return;
+					} else if (/[^a-zA-Z]/.test(guess)) {
+  const warningPopup = document.createElement("div");
+  warningPopup.innerHTML = "Please only use letters!";
+  warningPopup.style.position = "absolute";
+  warningPopup.style.top = "54px";
+  warningPopup.style.left = "50%";
+  warningPopup.style.transform = "translateX(-50%)";
+  warningPopup.style.padding = "0.5rem";
+  warningPopup.style.backgroundColor = "#000000";
+  warningPopup.style.color = "#fff";
+  warningPopup.style.fontSize = "1rem";
+  warningPopup.style.textAlign = "center";
+  warningPopup.style.borderRadius = "5px";
+  guessInput.parentNode.insertBefore(warningPopup, button);
+  setTimeout(() => {
+    warningPopup.parentNode.removeChild(warningPopup);
+  }, 1500);
+  return;
 					} else if (guess.split(' ').length > 1) {
 						const warningPopup = document.createElement("div");
 						warningPopup.innerHTML = "Surnames only please!";
