--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ setInterval(resetAt9am, 60 * 1000);
 						return;
 					} else if (/[^a-zA-Z]/.test(guess)) {
   const warningPopup = document.createElement("div");
-  warningPopup.innerHTML = "Please only use letters!";
+  warningPopup.innerHTML = "Letters only please!";
   warningPopup.style.position = "absolute";
   warningPopup.style.top = "54px";
   warningPopup.style.left = "50%";
